--- a/components/apps/pipelines-operator/base/tekton-config-metrics-partial.yaml
+++ b/components/apps/pipelines-operator/base/tekton-config-metrics-partial.yaml
@@ -5,6 +5,7 @@ metadata:
   annotations:
     argocd.argoproj.io/sync-options: Validate=false,ServerSideApply=true
     argocd.argoproj.io/sync-options: SkipDryRunOnMissingResource=true
+    argocd.argoproj.io/sync-wave: "9"
 spec:
   pipeline:
     metrics.taskrun.level: taskrun
