--- a/clusters/aws.cluster/apps/openshift-monitoring/base/cluster-monitoring-config-cm.yaml
+++ b/clusters/aws.cluster/apps/openshift-monitoring/base/cluster-monitoring-config-cm.yaml
@@ -11,7 +11,7 @@ data:
        spec:
          accessModes:
          - ReadWriteOnce
-         storageClassName: gp2
+         storageClassName: gp3-csi
          volumeMode: Filesystem
          resources:
            requests:
