Split Dashboard into three dashboards

--- a/components/configs/gitops-dashboard/base/kustomization.yaml
+++ b/components/configs/gitops-dashboard/base/kustomization.yaml
@@ -1,2 +1,4 @@
 resources:
-- gitops-dashboard.yaml
+- gitops-overview-dashboard.yaml
+- gitops-components-dashboard.yaml
+- gitops-grpc-dashboard.yaml
