Change 'GitOps' to 'GitOps (Overview)'

--- a/components/configs/gitops-dashboard/base/gitops-overview-dashboard.yaml
+++ b/components/configs/gitops-dashboard/base/gitops-overview-dashboard.yaml
@@ -1088,7 +1088,7 @@ data:
     },
     "timepicker": {},
     "timezone": "",
-    "title": "GitOps",
+    "title": "GitOps (Overview)",
     "uid": "K1hnzyb4z",
     "version": 10
     }
