--- a/components/apps/cert-manager-operator/operator/base/subscription.yaml
+++ b/components/apps/cert-manager-operator/operator/base/subscription.yaml
@@ -4,7 +4,7 @@ metadata:
   name: openshift-cert-manager-operator
   namespace: openshift-cert-manager-operator
 spec:
-  channel: tech-preview
+  channel: stable-v1
   installPlanApproval: Automatic
   name: openshift-cert-manager-operator
   source: redhat-operators
