--- a/components/apps/cert-manager-operator/operator/base/operator-group.yaml
+++ b/components/apps/cert-manager-operator/operator/base/operator-group.yaml
@@ -2,4 +2,7 @@ apiVersion: operators.coreos.com/v1
 kind: OperatorGroup
 metadata:
   name: openshift-cert-manager-operator
-spec: {}
+spec:
+  targetNamespaces:
+  - cert-manager-operator
+  upgradeStrategy: Default
