--- a/components/apps/cert-manager-operator/instance/overlays/letsencrypt/kustomization.yaml
+++ b/components/apps/cert-manager-operator/instance/overlays/letsencrypt/kustomization.yaml
@@ -5,7 +5,7 @@ commonAnnotations:
   argocd.argoproj.io/sync-options: SkipDryRunOnMissingResource=true
 
 resources:
-- ../../base
+# - ../../base
 - letsencrypt-aws-sealed-secret.yaml
 - letsencrypt-staging-cluster-issuer.yaml
 - letsencrypt-prod-cluster-issuer.yaml
