--- a/components/configs/gitops-dashboard/base/gitops-components-dashboard.yaml
+++ b/components/configs/gitops-dashboard/base/gitops-components-dashboard.yaml
@@ -1461,7 +1461,7 @@ data:
         {
             "allValue": ".+",
             "datasource": null,
-            "definition": "label_values(argocd_app_info, namespace)",
+            "definition": "label_values(argocd_cluster_info, namespace)",
             "description": null,
             "error": null,
             "hide": 0,
@@ -1471,7 +1471,7 @@ data:
             "name": "namespace",
             "options": [
             ],
-            "query": "label_values(argocd_app_info, namespace)",
+            "query": "label_values(argocd_cluster_info, namespace)",
             "refresh": 0,
             "regex": "",
             "skipUrlSync": false,
