Deploy argo rollouts in cluster

--- a/clusters/aws.cluster/argocd/bootstrap/values.yaml
+++ b/clusters/aws.cluster/argocd/bootstrap/values.yaml
@@ -44,7 +44,7 @@ applications:
     annotations:
       argocd.argoproj.io/sync-wave: "3"
     destination:
-      namespace: openshift-cert-manager
+      namespace: cert-manager-operator
     source:
       path: clusters/aws.cluster/apps/cluster-certs/overlays/cluster
 
