--- a/clusters/local.home/argocd/bootstrap/values.yaml
+++ b/clusters/local.home/argocd/bootstrap/values.yaml
@@ -214,6 +214,14 @@ applications:
     source:
       path: tenants/product-catalog/argocd/root/base
 
+  rollouts-demo-root:
+    project: cluster-config
+    annotations:
+      argocd.argoproj.io/compare-options: IgnoreExtraneous
+      argocd.argoproj.io/sync-wave: '51'
+    source:
+      path: tenants/rollouts-demo/argocd/root/base
+
   # demo-root:
   #   project: cluster-config
   #   annotations:
