--- a/tenants/rollouts-demo/namespaces/overlays/gitops/kustomization.yaml
+++ b/tenants/rollouts-demo/namespaces/overlays/gitops/kustomization.yaml
@@ -1,7 +1,7 @@
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 
-namespace: product-catalog-gitops
+namespace: rollouts-demo-gitops
 
 resources:
 - ../../base
