--- a/tenants/rollouts-demo/namespaces/overlays/prod/kustomization.yaml
+++ b/tenants/rollouts-demo/namespaces/overlays/prod/kustomization.yaml
@@ -1,7 +1,7 @@
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 
-namespace: demo-prod
+namespace: rollouts-demo-prod
 
 resources:
 - ../../base
