Add rollouts-demo-gitops to source ns

--- a/tenants/gitops/overlays/shared/kustomization.yaml
+++ b/tenants/gitops/overlays/shared/kustomization.yaml
@@ -42,6 +42,7 @@ patches:
       path: /spec/sourceNamespaces
       value:
         - product-catalog-gitops
+        - rollouts-demo-gitops
     - op: add
       path: /spec/rbac
       value:
