Re-enable admin account

--- a/components/apps/gitops-operator/base/gitops-operator-cr.yaml
+++ b/components/apps/gitops-operator/base/gitops-operator-cr.yaml
@@ -3,7 +3,7 @@ kind: ArgoCD
 metadata:
   name: argocd
 spec:
-  disableAdmin: true
+  disableAdmin: false
   configManagementPlugins: |-
     - name: kustomize-envvar
       generate:
