--- a/components/apps/sealed-secrets-operator/overlays/default/kustomization.yaml
+++ b/components/apps/sealed-secrets-operator/overlays/default/kustomization.yaml
@@ -7,6 +7,7 @@ bases:
 - github.com/redhat-cop/gitops-catalog/sealed-secrets-operator/base
 
 resources:
+- aggregate-to-admin.yaml
 - role-anyuid.yaml
 
 patchesJson6902:
