--- a/components/apps/argo-rollouts/base/kustomization.yaml
+++ b/components/apps/argo-rollouts/base/kustomization.yaml
@@ -2,4 +2,5 @@ namespace: argo-rollouts
 
 resources:
 - namespace.yaml
+- rollouts-analysis-monitoring.yaml
 - https://github.com/argoproj/argo-rollouts/releases/latest/download/install.yaml
