Update secrets and ID

--- a/components/apps/cert-manager-operator/issuers/letsencrypt-route53/base/letsencrypt-staging-cluster-issuer.yaml
+++ b/components/apps/cert-manager-operator/issuers/letsencrypt-route53/base/letsencrypt-staging-cluster-issuer.yaml
@@ -16,8 +16,8 @@ spec:
       dns01:
         route53:
           region: ca-central-1
-          accessKeyID: AKIAVW7HGAZVX3JBBJD2
+          accessKeyID: AKIAVW7HGAZVWLIKXRCA
           hostedZoneID: Z1LKUX3GLO9GW9
           secretAccessKeySecretRef:
             name: letsencrypt-aws
-            key: secret-access-key            
+            key: secret-access-key
