--- a/components/apps/cert-manager-operator/issuers/letsencrypt-route53/base/kustomization.yaml
+++ b/components/apps/cert-manager-operator/issuers/letsencrypt-route53/base/kustomization.yaml
@@ -5,7 +5,7 @@ commonAnnotations:
   argocd.argoproj.io/sync-options: SkipDryRunOnMissingResource=true
 
 resources:
-- cert-manager.yaml
+- cert-manager-ns.yaml
 - letsencrypt-aws-sealed-secret.yaml
 - letsencrypt-staging-cluster-issuer.yaml
 - letsencrypt-prod-cluster-issuer.yaml
