Fix storage class name

--- a/clusters/local.hub/apps/openshift-monitoring/base/cluster-monitoring-config-cm.yaml
+++ b/clusters/local.hub/apps/openshift-monitoring/base/cluster-monitoring-config-cm.yaml
@@ -11,7 +11,7 @@ data:
        spec:
          accessModes:
          - ReadWriteOnce
-         storageClassName: odf-lvm-vg
+         storageClassName: lvms-vg1
          volumeMode: Filesystem
          resources:
            requests:
